--- a/docs/blog/2022/06/软路由记录.md
+++ b/docs/blog/2022/06/软路由记录.md
@@ -23,9 +23,15 @@
 ## 固件
 
 版本日期：2022-5-31 (6月出的固件有无限重启的情况)
+
 [https://github.com/klever1988/nanopi-openwrt](https://github.com/klever1988/nanopi-openwrt)
 
 `qm importdisk 100 x86.img local-lvm`
 
+## 拓扑图
+
+![](https://picture.cdn.shafish.cn/blog/n5105-1.png)
+
 ref:
+
 - https://gitee.com/spoto/PVE_Generic_AIO
