--- a/docs/blog/2022/06/软路由记录.md
+++ b/docs/blog/2022/06/软路由记录.md
@@ -6,10 +6,10 @@
 
 | 物理接口符号 | pve识别网口号 | 物理网口 |软路由网口|
 | :-----:| :----: | :----: | :----: |
-| eth0 | enp2s0 | 02:00.0 | eth0(lan) |
-| eth1 | enp3s0 | 03:00.0 | eth3 |
-| eth2 | enp4s0 | 04:00.0 | eth2 |
-| eth3 | enp5s0 | 05:00.0 | eth1(wan) |
+| eth0 | enp2s0 | 02:00.0 | eth0(桥接) |
+| eth1 | enp3s0 | 03:00.0 | eth3(wan) |
+| eth2 | enp4s0 | 04:00.0 | eth2(lan) |
+| eth3 | enp5s0 | 05:00.0 | eth1(lan) |
 
 ## 硬件直通
 
