--- a/docs/blog/2022/06/软路由记录.md
+++ b/docs/blog/2022/06/软路由记录.md
@@ -35,3 +35,25 @@
 ref:
 
 - https://gitee.com/spoto/PVE_Generic_AIO
+
+
+-------
+2023.7.8更新
+
+固件重装：https://doc.linkease.com/zh/guide/istoreos/install_pve.html
+
+qm importdisk 104 /var/lib/vz/template/iso/istoreos-22.03.4-2023070715-x86-64-squashfs-combined.img local-lvm
+
+插件选择：https://github.com/AUK9527/Are-u-ok/tree/main/x86
+
+https://www.bilibili.com/video/BV1Wu411s7LZ/?spm_id_from=333.337.search-card.all.click&vd_source=0ec46a2ae87b184d839cb4bd004cfdf1
+
+ad:https://www.bilibili.com/video/BV1pK41197eb/?spm_id_from=333.337.search-card.all.click&vd_source=0ec46a2ae87b184d839cb4bd004cfdf1
+
+9.9.9.10
+149.112.112.10
+2620:fe::10
+2620:fe::fe:10
+
+
+127.0.0.1#7874
